# py-rust-stemmers

./: Cargo.toml  pyproject.toml
.github/workflows/: release.yml
py_rust_stemmers/: __init__.pyi
src/: lib.rs
