[project]
name = "py_rust_stemmers"
version = "0.1.5"
description = "Fast and parallel snowball stemmer"
readme = "README.md"

[build-system]
requires = ["maturin>=0.12"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3/abi3-py38"]

[dependency-groups]
dev = [
    "pytest",
    "tqdm",
    "snowballstemmer",
    "puccinialin", # Necessary for build in this environment
]
